Prevent overflow - Prevent overflow when dropdown buyer menu is clicked

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,10 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .alert {
   margin-bottom: 0 !important;
 }
